--- a/sample-site/index.html
+++ b/sample-site/index.html
@@ -170,53 +170,47 @@
           <div class="small-12 medium-9 columns">
 
             <h3>Framework sample pages</h3>
-            <p>These demonstrate a range of ways you can make use of the EBI styles and framework.</p>
+            <p class="lead">These demonstrate a range of ways you can make use of the EBI styles and framework.</p>
 
+            <hr/>
 
             <h4 id="boilerplate">Boilerplate</h4>
             <p>You can use these as templates for your code.</p>
             <ol>
               <li><a href="">Blank</a><br/>
-              big, empty space between header and footer</li>
+                big, empty space between header and footer</li>
               <li><a href="ebi-level2-boilerplate-right-sidebar-fluid.html">TO COME - Right sidebar</a><br/>
-              for content-driven pages deeper in your site's hierarchy, the sidebar could contain secondary navigation</li>
+                for content-driven pages deeper in your site's hierarchy, the sidebar could contain secondary navigation</li>
               <li><a href="ebi-level2-boilerplate-4cols-fluid.html">TO COME - Four columns</a><br/>
-              an example of dividing the page into four broad content areas</li>
+                an example of dividing the page into four broad content areas</li>
               <li><a href="ebi-level2-boilerplate-search-results-fluid.html">TO COME - Search results</a><br/>
-              an example page with filters or facets for your results in a left-hand sidebar, and a right-hand sidebar for global results</li>
+                an example page with filters or facets for your results in a left-hand sidebar, and a right-hand sidebar for global results</li>
               <li><a href="ebi-search-results-complete.html">TO COME - Search Results Complete</a><br/>
-              template for a basic search results page </li>
+                template for a basic search results page </li>
               <li><a href="ebi-no-search-results.html">TO COME - No Search Results</a><br/>
                 template for a page of zero results </li>
             </ol>
 
-
             <h4>Level 1 implementations</h4>
             <p>Examples of services aiming for full compliance.</p>
-
             <ol>
               <li><a href="front_page.html">EBI Homepage</a> <br/>
-              test</li>
-
+                test</li>
               <li><a href="research.html">Research page</a> <br/>
-              test</li>
-
+                test</li>
               <li><a href="brochure.html">Brochure page</a> <br/>
-              Technical recruitment</li>
+               Technical recruitment</li>
             </ol>
 
             <h4>Partial and Level 3 implementations</h4>
             <p>These examples show implementations of sites making use of only part of the EBI visual guidelines or technical framework  .</p>
-
             <ol>
               <li><a href="">TO COME - Bootstrap</a><br/>
-              For services aiming for full visual compliance but not using the Foundation Framework base.</li>
-
+                For services aiming for full visual compliance but not using the Foundation Framework base.</li>
               <li><a href="">TO COME - No JS</a><br/>
-              Using the Foundation base framework with JavaScript or jQuery.</li>
-
+                Using the Foundation base framework with JavaScript or jQuery.</li>
               <li><a href="">TO COME - No JS or Foundation</a><br/>
-              You won't benefit from any of the reusable components, but here's a bare bones visual implentation.</li>
+                You won't benefit from any of the reusable components, but here's a bare bones visual implentation.</li>
             </ol>
 
           </div> <!-- /medium-9 -->
@@ -236,8 +230,6 @@
                 </ul>
               </div>
             </div>
-
-
 
           </div> <!-- /medium-3 -->
 
