Add ultrawide support

--- a/index.html
+++ b/index.html
@@ -405,12 +405,10 @@
 
               <section id="search-templates" data-magellan-target="search-templates">
                 <h2>Search</h2>
-                  <div class="row">
-                    <div class="columns medium-6">
-                      <p>Use this format to search your project or subsite.</p>
-                    </div>
+                  <p>Use this format to search your project or subsite.</p>
 
-                    <div class="callout columns medium-6">
+                  <div class="row">
+                    <div class="callout columns medium-6 medium-push-3">
                       <!-- local-search -->
                       <!-- if you do not have a local-search, delete the following form -->
                       <form id="local-search" name="local-search" action="[search-action]" method="post">
@@ -993,7 +991,7 @@
                 <div class="callout warning">
 
                   <h3><span class="icon icon-generic " data-icon="U"></span> How to use this</h3>
-                  <p>The belwo describes how the EMBL-EBI Web Development team analyzes and supports the EBI Framework and sites the team maintains, we suggest you use this as a starting point, adapting it for the browsers of your users, and devices you can procure to test on.</p>
+                  <p>The below describes how the EMBL-EBI Web Development team analyses and supports the EBI Framework and sites the team maintains, we suggest you use this as a starting point, adapting it for the browsers of your users, and devices you can procure to test on.</p>
                   <p>For further guidance, reach out to the Web Development team for assistance on how to set up a testing environment.</p>
 
                 </div>
