--- a/sample-site/index.html
+++ b/sample-site/index.html
@@ -179,6 +179,8 @@
             <ol>
               <li><a href="boilerplate/blank.html">Blank</a><br/>
                 big, empty space between header and footer</li>
+              <li><a href="boilerplate/ultra-wide.html">Ultra wide</a><br/>
+                for content with large table or graphics that benefit from using as much screen space as they can get</li>
               <li><a href="boilerplate/ebi-level2-boilerplate-right-sidebar-fluid.html">TO COME - Right sidebar</a><br/>
                 for content-driven pages deeper in your site's hierarchy, the sidebar could contain secondary navigation</li>
               <li><a href="boilerplate/ebi-level2-boilerplate-4cols-fluid.html">TO COME - Four columns</a><br/>
