Full-width class

--- a/sample-site/boilerplate/ultra-wide.html
+++ b/sample-site/boilerplate/ultra-wide.html
@@ -171,7 +171,7 @@
 
             <h3>Wide screen layouts</h3>
             <p class="lead">Here we've used a very wide table to demonstarte how you might accomodate larger content.</p>
-            <p>To activate the flexible layout, add <code>.wide-screen</code> to your <code>body</code> tag.</p>
+            <p>To activate the flexible layout, add <code>.full-width</code> to your <code>body</code> tag.</p>
             <p>If your content is a table, be sure to also <a href="../../index.html">have a look at the table guidance</a>.</p>
 
             <div class="callout warning">
