Add no-stripe option to tables

--- a/index.html
+++ b/index.html
@@ -770,6 +770,9 @@
                   </tbody>
                 </table>
 
+                <h3>Striping</h3>
+                <p>By default tables will be zebra striped. To disable add class <code>.no-stripe</code> to your <code>table</code> element.</p>
+
                 <h3>Responsive tables</h3>
                 <p>Tables are tricky to stretch and grow, and we suggest three approaches to tackle most issues. In increasing complexity:</p>
 
