Add expression atlas as a sample site

--- a/sample-site/index.html
+++ b/sample-site/index.html
@@ -174,7 +174,7 @@
 
             <hr/>
 
-            <h4 id="boilerplate">Boilerplate</h4>
+            <h4 id="boilerplate">Boilerplates</h4>
             <p>You can use these as templates for your code.</p>
             <ol>
               <li><a href="boilerplate/blank.html">Blank</a><br/>
@@ -193,22 +193,24 @@
                 template for a page of zero results </li>
             </ol>
 
-            <h4>Level 1 implementations</h4>
+            <h4>Sample Level 1 implementations</h4>
             <p>Examples of services aiming for full compliance.</p>
             <ol>
               <li><a href="front_page.html">EBI Homepage</a> <br/>
-                test</li>
+                Porting the EBI Homepage.</li>
               <li><a href="research.html">Research page</a> <br/>
-                test</li>
+                Porting the EBI Research page.</li>
               <li><a href="brochure.html">Brochure page</a> <br/>
-               Technical recruitment</li>
+                A high-impact brochure-style page for technical hiring.</li>
             </ol>
 
-            <h4>Partial and Level 3 implementations</h4>
-            <p>These examples show implementations of sites making use of only part of the EBI visual guidelines or technical framework  .</p>
+            <h4>Sample Level 3 implementations</h4>
+            <p>These examples show implementations of sites making use of only part of the EBI visual guidelines or technical framework.</p>
             <ol>
               <li><a href="">TO COME - Bootstrap</a><br/>
                 For services aiming for full visual compliance but not using the Foundation Framework base.</li>
+              <li><a href="">Expression Atlas</a> <label>Bootstrap</label><br/>
+                Here we shows a sample migration of a service, note that this sample also supports bootstrap.</li>
               <li><a href="">TO COME - No JS</a><br/>
                 Using the Foundation base framework with JavaScript or jQuery.</li>
               <li><a href="">TO COME - No JS or Foundation</a><br/>
