--- a/sample-site/migrations/expression-atlas/expression-atlas-updated.html
+++ b/sample-site/migrations/expression-atlas/expression-atlas-updated.html
@@ -1,10 +1,11 @@
 <!-- 
+NOTE: This web page:
 
-NOTE: This code is a copy and past of the source from http://www.ebi.ac.uk/gxa/experiments/E-MTAB-4401?_specific=on&queryFactorType=ORGANISM_PART&queryFactorValues=leaf&geneQuery=&exactMatch=true
+1) Began as a copy and past of the source from http://www.ebi.ac.uk/gxa/experiments/E-MTAB-4401?_specific=on&queryFactorType=ORGANISM_PART&queryFactorValues=leaf&geneQuery=&exactMatch=true 
 
-Code copied on 2016-05-06.
+2) Was edited to integrate the refreshed EBI compliance themes. Navigate up a directory to get a link to an annotated diff of the changes.
 
- -->
+-->
 
 <!DOCTYPE html>
 
@@ -1161,6 +1162,22 @@ Code copied on 2016-05-06.
 
 <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/js/cookiebanner.js"></script>
 <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/js/foot.js"></script>
+  <script type="text/JavaScript">$(document).foundation();</script>
+  <script type="text/JavaScript">$(document).foundationExtendEBI();</script>
+<!--
+   -->
+
+  
+  <!-- Google Analytics details... -->
+  <!-- Change UA-XXXXX-X to be your site's ID -->
+  <!--
+  <script>
+    window._gaq = [['_setAccount','UAXXXXXXXX1'],['_trackPageview'],['_trackPageLoadTime']];
+    Modernizr.load({
+      load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
+    });
+  </script>
+  -->
 
 <script type="text/javascript">
 
