--- a/sample-site/migrations/expression-atlas/expression-atlas-updated.html
+++ b/sample-site/migrations/expression-atlas/expression-atlas-updated.html
@@ -90,7 +90,7 @@ NOTE: This web page:
 
     <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
     <!-- also inform ES so we can host your colour palette file -->
-    <link rel="stylesheet" href="http://10.211.55.4/sample-site/migrations/expression-atlas/expression-atlas-colours.css" type="text/css" media="all">
+    <link rel="stylesheet" href="https://khawkins98.github.io/EBI-Framework/sample-site/migrations/expression-atlas/expression-atlas-colours.css" type="text/css" media="all">
 
     <!-- for production the above can be replaced with -->
     <!--
