Add live filter placeholder/library

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
                         <li><a href="#icons">Icons</a></li>
                         <li><a href="#lists">Lists</a></li>
                         <li><a href="#tables">Tables</a></li>
+                        <li><a href="#live-filtering">Live filter</a></li>
                         <li><a href="#images">Images</a></li>
                       </ul>
                     </ul>
@@ -884,7 +885,7 @@
                   </tbody>
                 </table>
 
-                <p>Tip: if the plugin isn't detecting your data type correctly, try telling the plugin of your data type and include the <code>jquery.metadata.js</code> file.</p>
+                <p>Tip: if the plugin isn't detecting your data type correctly, try telling the plugin of your data type and include Tablesorter's optional <code>jquery.metadata.js</code>.</p>
 
                 <!-- Include for table sorting -->
                 <!-- Note that we've loaded this with "defer", this technique may not be appropriate for your uses.
@@ -898,6 +899,14 @@
                     ); 
                   }
                 </script>
+
+              </section>
+
+              <section id="live-filtering" data-magellan-target="live-filtering">
+                <h2>Live filtering</h2>
+
+                <p>SEARCH IT NOW!</p>
+
 
               </section>
 
