Update implementation guidance

--- a/index.html
+++ b/index.html
@@ -298,6 +298,20 @@
                   <p>Also see the <a href="sample-site/">sample pages</a> to get an idea of how real content would look and work using the framework.</p>
                 </div>
 
+                <h3>Implementing the framework</h3>
+                <p>There are two likely scenarios:</p>
+                
+                <blockquote class="float-right columns medium-5"><h5>Using Drupal?</h5> Contact Web Development. There is a Drupal 7 theme you can use, and a Drupal 8 version is coming soon(ish).</blockquote>
+
+                <dl>
+                  <dt>Implementing a new project?</dt>
+                  <dd><p>If you're starting from scratch, check out the collection of boilerplate code, check out the source, and get going. <a href="https://khawkins98.github.io/EBI-Framework/sample-site/" class="readmore">To the boilerplate</a></p></dd>
+
+                  <dt>Updating an existing site?</dt>
+                  <dd><p>If you're updating a site that is already using the EBI Compliance theme, you'll just need to replace a few JS/CSS files, change some layout classes, and make minore tweaks. It could take as little as 30 minutes. <a href="https://github.com/khawkins98/EBI-Framework/commit/a49d3668f2b80058be8c277d875c8b06f47a7237" class="readmore">Check out the sample migration</a></p></dd>
+
+                </dl>
+
                 <h3>Requirements and what you get</h3>
                 <p>The framework is built with modern best practices and targets browsers shipped within the past three years; though other browsers should still handle the content and appearance well (graceful degradation). The framework is also mobile responsive (Responsive Web Design), so you won't have to spend too much time adapting for mobile.</p>
                 <p>To help us help you, we've used the Foundation Framework (version 6) as a baseline. Using this we get a robust set of web components (tool tips, forms, sliders, and modal boxes) as well as technical guidance and extensive open source community testing -- and, perhaps, you'll be fortunate enough to already have a developer with experience with Foundation.</p>
@@ -305,10 +319,9 @@
                 <p>The easiest way to implement the style guide is to <a href="https://khawkins98.github.io/EBI-Framework/sample-site/#boilerplate">download the EBI boilerplate</a> - use those HTML files as a template for your own pages. It contains the HTML for the EBI header and footer and place holders for your project name / logo and page content. It also links to the core stylesheets you'll need to make your web pages look like part of the EBI website.</p>
                 <p><a href="https://github.com/khawkins98/EBI-Framework/archive/master.zip" class="button sans-serif">Download the framework</a> or <a href="https://github.com/khawkins98/EBI-Framework/">view on Github</a></p>
 
-                <h3>How to implement</h3>
-                <blockquote class="float-right columns medium-5"><h5>Using Drupal?</h5> Contact Web Development. There is a Drupal 7 theme you can use, and a Drupal 8 version is coming soon(ish).</blockquote>
+                <h3>Framework components</h3>
                 <p>This framework functions many front-end solutions.</p>
-                <p>There are several files and structures that we use, generally these can be implemented seperately so you can use what you can or your own solution if required. Outright dependencies are nested.</p>
+                <p>There are several files and structures that we use, generally these can be implemented seperately so you can use what you can or your own solution if required.</p>
 
                 <div class="callout">
                   <ol>
@@ -333,7 +346,7 @@
                 <p>In short: add header markup, footer markup, CSS and JS. Then add content.</p>
                 <p>To get started check out the structure of the <a href="sample-site">sample boiler plate page</a>.</p>
 
-                <div class="callout warning row">
+                <div class="">
                   <h3>FAQs</h3>
                   <dl>
                     <dt>JavaScript:</dt>
