Updates EA migration entry

--- a/sample-site/index.html
+++ b/sample-site/index.html
@@ -202,6 +202,8 @@
                 Porting the EBI Research page.</li>
               <li><a href="brochure.html">Brochure page</a> <br/>
                 A high-impact brochure-style page for technical hiring.</li>
+              <li><a href="https://github.com/khawkins98/EBI-Framework/commit/a49d3668f2b80058be8c277d875c8b06f47a7237">Expression Atlas</a> <span class="label">Bootstrap</span><br/>
+                Here we show a sample migration of a service, note that the service's use of bootstrap does not cause issue.</li>
             </ol>
 
             <h4>Sample Level 3 implementations</h4>
@@ -209,8 +211,6 @@
             <ol>
               <li><a href="">TO COME - Bootstrap</a><br/>
                 For services aiming for full visual compliance but not using the Foundation Framework base.</li>
-              <li><a href="">Expression Atlas</a> <label>Bootstrap</label><br/>
-                Here we shows a sample migration of a service, note that this sample also supports bootstrap.</li>
               <li><a href="">TO COME - No JS</a><br/>
                 Using the Foundation base framework with JavaScript or jQuery.</li>
               <li><a href="">TO COME - No JS or Foundation</a><br/>
