Disable sticky header

--- a/sample-site/migrations/expression-atlas/expression-atlas-updated.html
+++ b/sample-site/migrations/expression-atlas/expression-atlas-updated.html
@@ -176,7 +176,7 @@ NOTE: This web page:
     
 
   <div data-sticky-container>
-    <div id="local-masthead" data-sticky data-sticky-on="large" data-top-anchor="180" data-btm-anchor="300000">
+    <div id="local-masthead" data-sticky data-sticky-on="disabled" data-top-anchor="180" data-btm-anchor="300000">
       <header>
 
         <div id="global-masthead" class="clearfix">
